# research

./: .gitignore  README.md
docs/: architecture.md  plan.md  product_spec.md
finance/: CLAUDE.md  README.md
finance/components/: finance_component_template.jsx
finance/docs/: COMPLETE_EXAMPLE.md  GITHUB_WORKFLOW_SETUP.md  QUICK_REFERENCE.md
finance/scripts/: finance_script_template.py
finance/utilities/: finance_helpers_template.js
financeflow/: CLAUDE.md  README.md  finance-tracker.jsx  getting-started.md
financeflow/docs/: .gitignore  CLAUDE.md  user-walkthrough.md  walkthrough.md
powerapp-appointments/: CLAUDE.md  README.md
powerapp-appointments/docs/: ARCHITECTURE.md  DEPLOYMENT.md  WALKTHROUGH.md
powerapp-appointments/scripts/: CreateSharePointLists.ps1
warehouse/: .gitignore  CLAUDE.md  README.md  auth.py  database.py  main.py  models.py  picking.py  requirements.txt  schemas.py
warehouse/demo/: demo.sh  seed.py  warehouse_demo.md
warehouse/routers/: aisles.py  auth.py  bins.py  inventory.py  (+7 more)
whatsup/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  harness.py
whatsup/crates/whatsup-crypto/: Cargo.toml
whatsup/crates/whatsup-crypto/src/: error.rs  lib.rs
whatsup/crates/whatsup-crypto/src/double_ratchet/: chain.rs  mod.rs  session.rs  state.rs
whatsup/crates/whatsup-crypto/src/sender_keys/: distribution.rs  group_session.rs  mod.rs  sender_key.rs
whatsup/crates/whatsup-crypto/src/x3dh/: handshake.rs  identity_key.rs  key_bundle.rs  mod.rs  one_time_prekey.rs  signed_prekey.rs
whatsup/crates/whatsup-protocol/: Cargo.toml
whatsup/crates/whatsup-protocol/src/: error.rs  events.rs  lib.rs  messages.rs  rest.rs
whatsup/crates/whatsup-server/: Cargo.toml
whatsup/crates/whatsup-server/src/: config.rs  main.rs  state.rs
whatsup/crates/whatsup-server/src/api/: auth.rs  files.rs  groups.rs  keys.rs  messages.rs  mod.rs  users.rs
whatsup/crates/whatsup-server/src/db/: mod.rs  schema.rs  writer.rs
whatsup/crates/whatsup-server/src/middleware/: auth.rs
whatsup/crates/whatsup-server/src/ws/: handler.rs  hub.rs  mod.rs
whatsup/crates/whatsup-tui/: Cargo.toml
whatsup/crates/whatsup-tui/src/: app.rs  config.rs  main.rs
whatsup/crates/whatsup-tui/src/net/: rest.rs  ws.rs
whatsup/crates/whatsup-tui/src/state/: mod.rs
whatsup/crates/whatsup-tui/src/ui/: chat_view.rs  input_bar.rs  login.rs  mod.rs  sidebar.rs  status_bar.rs
whatsup/docs/: ARCHITECTURE.md  CODE_WALKTHROUGH.md  DEVELOPER.md  PLANS.md  walkthrough.md
whatsup/docs/issues/4/: implementation_plan.md  task.md  walkthrough.md
whatsup/loadtests/: HOW_TO_RUN.md  INDEX.md  run_1000u_summary.md  run_100u_summary.md  run_200u_summary.md  run_300u_summary.md  run_400u_summary.md  run_500u_pool_summary.md  run_500u_summary.md
(+145 files in other folders)
