[workspace]
members = [
    "crates/whatsup-crypto",
    "crates/whatsup-protocol",
    "crates/whatsup-server",
    "crates/whatsup-tui",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Crypto primitives
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
