[package]
name = "whatsup-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "1"

[dev-dependencies]
rand = "0.8"
